fix bug on productDetail page not showing the product

--- a/src/AccountStyles.css
+++ b/src/AccountStyles.css
@@ -23,7 +23,7 @@
     padding: 10px;
     margin-top: 15px;
     background-color: #36893c;
-    color: #fff;
+    color: white;
     border: none;
     border-radius: 3px;
     cursor: pointer;
