--- a/src/ProductListStyles.css
+++ b/src/ProductListStyles.css
@@ -8,7 +8,7 @@
     width: calc(33.33% - 20px);
     margin-bottom: 20px;
     padding: 20px;
-    background-color: #fff;
+    background-color: white;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -37,7 +37,7 @@
     background-color: #36893c;
     border: none;
     border-radius: 5px;
-    color: #fff;
+    color: white;
     font-size: 16px;
     cursor: pointer;
 }
